--- a/assets/simd-scheme-ii-data-layout.tex
+++ b/assets/simd-scheme-ii-data-layout.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}[
   show background rectangle,
-  node distance=1cm and 0.1cm,
+  node distance=5mm and 0.1cm,
   vsstyle/.style={inner sep=0, outer sep=0, draw=gray, fill=dodgerblue4, text=white, minimum height=1cm, minimum width=2cm},
   vstyle/.style={draw=gray, inner sep=0, outer sep=0, minimum height=1cm, minimum width=2cm},
   namestyle/.style={draw=none, minimum height=1cm, minimum width=1cm},
