--- a/content/c3sr-benchmarks.tex
+++ b/content/c3sr-benchmarks.tex
@@ -391,3 +391,4 @@
 
     Thus, the performance benefits of the C3SR format may be kept even when trading larger storage sizes in favor of the parallelizability of the application.
 
+\Todo{skl2s8c hat schlechte SIMD Perf bei complex Matrices. Mglw. Probleme mit Stride Gather?}
