--- a/mscthesis.tex
+++ b/mscthesis.tex
@@ -102,6 +102,7 @@
   \todo[FINAL]{Schreibweise der Arrays vereinheitlichen}
   \todo[FINAL]{non-zero vs nonzero}
   \todo{Subsubsection \& Paragraph stylistisch trennen}
+  \todo{Reihenbeschriftung der simd-i..-scheme Matrizen horizontal ausrichten}
   \todos
 
 \end{document}
