--- a/content/c3sr-implementation.tex
+++ b/content/c3sr-implementation.tex
@@ -68,7 +68,7 @@
     row-pointer array, an operation which constitutes the exclusive scan's inverse operation used to construct the
     row-pointer array for a CSR-matrix from the number of nonzeros in each row.
 
-  \section{Run-Length Encoding}
+  \section{Run-Length-Increment Encoding}
 
     \Todo{Inhalt}
 
