--- a/content/c3sr-c3sr.tex
+++ b/content/c3sr-c3sr.tex
@@ -228,7 +228,7 @@
       can drastically improve the arithmetic performance of the C3SR format despite the more complex memory access
       scheme as will be shown in the benchmark section.
 
-    \subsection{Vectorized SIMD Multiplication Scheme} \label{subsubsec:vectorized-simd-multiplication-scheme}
+    \subsection{Vectorized SIMD Multiplication Scheme} \label{sec:vectorized-simd-multiplication-scheme}
 
       Aside of the performance benefits due to smaller object sizes and better data locality sparse banded matrices
       derived from structured grids stored in C3SR-format exhibit data layouts particularly well suited for a vectorized
