--- a/mscthesis.tex
+++ b/mscthesis.tex
@@ -106,6 +106,7 @@
   \todo{Reihenbeschriftung der simd-i..-scheme Matrizen horizontal ausrichten}
   \todo{Figure-Style überall anpassen}
   \todo{value's array vs value array}
+  \todo{peg index vs peg-index}
   \todos
 
 \end{document}
